# OpenVR-Display-Devices

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OpenVR Display Devices.sln  README.md
.github/workflows/: msbuild-release.yml  msbuild.yml
OpenVR Display Devices/: .editorconfig  BatteryChecker.cpp  BatteryChecker.h  OpenVR Display Devices.rc  OpenVR Display Devices.vcxproj  OpenVR Display Devices.vcxproj.filters  OpenVR-Display-Devices.cpp  OpenVR-Display-Devices.h  Webchaussette.cpp  Webchaussette.h  battery_checker.cpp  battery_checker.h  config.h  configuration.cpp  configuration.h  droid_sans_font.cpp  droid_sans_font.h  main.cpp  main.h  manifest.vrmanifest  notifications.cpp  notifications.h  packages.config  resource.h  user_interface.cpp  user_interface.h  vcpkg.json
OpenVRDisplayDevicesSetup/: OpenVRDisplayDevicesSetup.vdproj
includes/: config.h.in  configuration.h  droid_sans_font.h  main.h  notifications.h  user_interface.h
installer/: installer.nsi
src/: configuration.cpp  droid_sans_font.cpp  main.cpp  notifications.cpp  user_interface.cpp
